--- a/index.html
+++ b/index.html
@@ -120,16 +120,6 @@
 
 
 
-        <div class="bg-video">
-            <div class="bg-video-layer">
-
-            </div>
-            <video id="myVideo" class="bg-video-content" autoplay muted loop>
-                <source src="img/video.mp4" type="video/mp4">
-                <source src="img/video.webm" type="video/webm">
-                Your browser is not supported!
-            </video>
-        </div>
 
 
 
@@ -140,20 +130,12 @@
                     <div class="col d-flex justify-content-center align-items-center">
                         <div class="card">
                             <div class="card-heading">
-                                <h2 class="card-heading">Modular <p>One</p>
+                                <h2 class="card-heading">MODULAR <p>ONE</p>
                                 </h2>
                             </div>
                             <div class="card-main">
-                                <p class="card-main">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Inventore
-                                    cumque nemo
-                                    voluptatibus ipsum est error, molestias amet deserunt, possimus exercitationem
-                                    ex
-                                    facere
-                                    velit nisi nostrum neque, architecto eligendi quis iste!</p>
-                            </div>
-                            <div class="card-foot">
-                                <a href="#" class="button">Anmelden</a>
+                                <p class="card-main">DIGITAL PLANNING – EFFICIENT CONSTRUCTION – SUSTAINABLE OPERATION
+                                </p>
                             </div>
 
                         </div>
@@ -168,33 +150,146 @@
 
         <section class="digital navto" id="digitalisierung">
             <div class="wrapper">
-                <h1 class="heading-1 digitalisierung-cap-heading">Digitalisierung</h1>
+                <h1 class="heading-1 digitalisierung-cap-heading">Revolution der Baubranche</h1>
                 <div class="flex-grid">
-                    <div class="col d-flex justify-content-center align-items-center">
+                    <div class="col d-flex justify-content-center">
                         <div class="frame">
                             <div class="frame-pic frame-pic-1">
-
+                                <p class="frame-text frame-text-1"><span>BIM</span></p>
                             </div>
                             <div class="frame-pic frame-pic-2">
-
+                                <p class="frame-text frame-text-1"><span>LEAN</span></p>
                             </div>
                             <div class="frame-pic frame-pic-3">
-
+                                <p class="frame-text frame-text-1"><span>METHODIK</span></p>
                             </div>
                         </div>
 
                     </div>
-                    <div class="col">Col-2</div>
+                    <div class="col d-flex justify-content-center align-items-center">
+                        <div class="digital-text">
+                            <h4 class="digital-text-header">DIGITALE TRANSFORMATION</h4>
+                            <p class="digital-text-absatz">
+                                Die digitale Transformation der
+                                Baubranche liefert zukünftig bahnbrechende Möglichkeiten für positive Veränderungen.
+
+
+                            </p>
+                            <p class="digital-text-absatz">
+                                Unser Anspruch ist es mit innovativen Services Teil der Lösung hinsichtlich digitaler,
+                                nachhaltiger und standardisierter (Bau-)Prozesse zu sein. Durch digitale Prozesse
+                                ermöglichen
+                                wir eine partnerschaftliche Zusammenarbeit aller Projektbeteiligten – so beschreiten wir
+                                den
+                                Weg
+                                der digitalen Transformation, gemeinschaftlich mit unseren Kunden und Partnern.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
 
         <section class="bim5d navto" id="bim5d">
             <div class="wrapper">
-                <h1 class="heading-1 bim5d-cap-heading">BIM5D</h1>
+                <h1 class="heading-1 bim5d-cap-heading">Vorteile</h1>
                 <div class="flex-grid">
-                    <div class="col">Col-1</div>
-                    <div class="col">Col-2</div>
+                    <div class="col d-flex justify-content-center">
+                        <div class="flip">
+                            <div class="flip__side flip__side--front">
+                                <div class="flip__picture flip__picture-1">
+                                    &nbsp;
+                                </div>
+                                <h4 class="flip__heading">
+                                    <span class="flip__heading--span flip__heading--span--1">Jungle Profi</span>
+
+                                </h4>
+                                <div class="flip__details">
+                                    <ul>
+                                        <li>3 day bootcamp</li>
+                                        <li>how to clear camps</li>
+                                        <li>gank like jankos</li>
+                                        <li>become lee sin god</li>
+                                        <li>jungle pathing</li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                            <div class="flip__side flip__side--back flip__side--back-1">
+                                <div class="flip__cta">
+                                    <div class="flip__price-box">
+                                        <p class="flip__price-only">Only</p>
+                                        <p class="flip__price-value">$298</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book now!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <div class="flip">
+                            <div class="flip__side flip__side--front">
+                                <div class="flip__picture flip__picture-1">
+                                    &nbsp;
+                                </div>
+                                <h4 class="flip__heading">
+                                    <span class="flip__heading--span flip__heading--span--1">Jungle Profi</span>
+
+                                </h4>
+                                <div class="flip__details">
+                                    <ul>
+                                        <li>3 day bootcamp</li>
+                                        <li>how to clear camps</li>
+                                        <li>gank like jankos</li>
+                                        <li>become lee sin god</li>
+                                        <li>jungle pathing</li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                            <div class="flip__side flip__side--back flip__side--back-1">
+                                <div class="flip__cta">
+                                    <div class="flip__price-box">
+                                        <p class="flip__price-only">Only</p>
+                                        <p class="flip__price-value">$298</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book now!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <div class="flip">
+                            <div class="flip__side flip__side--front">
+                                <div class="flip__picture flip__picture-1">
+                                    &nbsp;
+                                </div>
+                                <h4 class="flip__heading">
+                                    <span class="flip__heading--span flip__heading--span--1">Jungle Profi</span>
+
+                                </h4>
+                                <div class="flip__details">
+                                    <ul>
+                                        <li>3 day bootcamp</li>
+                                        <li>how to clear camps</li>
+                                        <li>gank like jankos</li>
+                                        <li>become lee sin god</li>
+                                        <li>jungle pathing</li>
+                                    </ul>
+                                </div>
+
+                            </div>
+                            <div class="flip__side flip__side--back flip__side--back-1">
+                                <div class="flip__cta">
+                                    <div class="flip__price-box">
+                                        <p class="flip__price-only">Only</p>
+                                        <p class="flip__price-value">$298</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book now!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
