--- a/index.html
+++ b/index.html
@@ -18,111 +18,120 @@
     <div class="loader-wrapper">
         <span class="loader"><span class="loader-inner"></span></span>
     </div>
-    <div class="content-wrapper">
-
-
-        <nav class="mobilenavigation">
-            <div class="button_container" id="toggle">
-                <span class="top hamline"></span>
-                <span class="middle hamline"></span>
-                <span class="bottom hamline"></span>
-            </div>
-
-            <div class="overlay" id="overlay">
-                <nav class="overlay-menu">
-                    <ul>
-                        <li><a href="#home">Modular One</a></li>
-                        <li><a href="#digitalisierung">Digital</a></li>
-                        <li><a href="#bim5d">BIM5D</a></li>
-                        <li><a href="#wir">Über Uns</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </nav>
-
-        <nav class="sidenavigation">
-
-            <div class="open" id="nav-icon1">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-
-            <a href="#home">
-                <div class="navlogo">
-                    <svg width="90" height="90" version="1.1" viewBox="0 0 32.017 32.017"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path class="logoanimate"
-                            d="m16.007 12.631 6.6649-6.6675h3.3787v2.7331h-2.2463l-7.7973 7.7973-7.3131-7.3131v16.87h-2.7305v-20.087h3.3787z"
-                            fill="#263238" />
-                        <path class="" d="m23.397 11.025-2.3178 2.3178v1.6245h2.241v11.083h2.7305v-15.026z"
-                            fill="#f7d147" />
-                        <style type="text/css">
-                            .st0 {
-                                fill: #263238;
-                            }
-
-                            .st1 {
-                                fill: #F7D147;
-                            }
-                        </style>
-                        <rect class="animatestroke" x="1.0141" y="1.0141" width="29.989" height="29.989" fill="none"
-                            stroke="black" stroke-linecap="round" stroke-width=".6" />
-                    </svg>
-                </div>
-            </a>
-
-            <div class="content">
-                <div class="navline"></div>
-            </div>
 
 
 
-            <div class="sidenav">
+    <nav class="mobilenavigation">
+        <div class="button_container" id="toggle">
+            <span class="top hamline"></span>
+            <span class="middle hamline"></span>
+            <span class="bottom hamline"></span>
+        </div>
 
-
-
+        <div class="overlay" id="overlay">
+            <nav class="overlay-menu">
                 <ul>
-                    <li><a id="navline-home" class="show navsign" href="#home">
-                            <div class="sideline">
-                                <div class="inner home-nav-item"></div>
-                            </div>
-                            <p class="number home-nav-item">001</p>
-                            <p class="titel home-nav-item">M1</p>
-                        </a></li>
-                    <li><a id="navline-digitalisierung" class="show navsign" href="#digitalisierung">
-                            <div class="sideline">
-                                <div class="inner digitalisierung-nav-item"></div>
-                            </div>
-                            <p class="number digitalisierung-nav-item">002</p>
-                            <p class="titel digitalisierung-nav-item">Digital</p>
-                        </a></li>
-                    <li><a id="navline-bim5d" class="show navsign" href="#bim5d">
-                            <div class="sideline">
-                                <div class="inner bim5d-nav-item"></div>
-                            </div>
-                            <p class="number bim5d-nav-item">003</p>
-                            <p class="titel bim5d-nav-item">Bim5D</p>
-                        </a></li>
-                    <li><a id="navline-wir" class="show navsign" href="#wir">
-                            <div class="sideline">
-                                <div class="inner wir-nav-item"></div>
-                            </div>
-                            <p class="number wir-nav-item">004</p>
-                            <p class="titel wir-nav-item">Über uns</p>
-                        </a></li>
-                    <li><a id="navline-boxes" class="show navsign" href="#boxes">
-                            <div class="sideline">
-                                <div class="inner boxes-nav-item"></div>
-                            </div>
-                            <p class="number boxes-nav-item">005</p>
-                            <p class="titel boxes-nav-item">Plan</p>
-                        </a></li>
+                    <li><a href="#home">Modular One</a></li>
+                    <li><a href="#digitalisierung">Digital</a></li>
+                    <li><a href="#bim5d">BIM5D</a></li>
+                    <li><a href="#wir">Über Uns</a></li>
                 </ul>
+            </nav>
+        </div>
+    </nav>
 
+    <nav class="sidenavigation">
 
+        <div class="open" id="nav-icon1">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
+        <a href="#home">
+            <div class="navlogo">
+                <svg width="90" height="90" version="1.1" viewBox="0 0 32.017 32.017"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path class="logoanimate"
+                        d="m16.007 12.631 6.6649-6.6675h3.3787v2.7331h-2.2463l-7.7973 7.7973-7.3131-7.3131v16.87h-2.7305v-20.087h3.3787z"
+                        fill="#263238" />
+                    <path class="" d="m23.397 11.025-2.3178 2.3178v1.6245h2.241v11.083h2.7305v-15.026z"
+                        fill="#f7d147" />
+                    <style type="text/css">
+                        .st0 {
+                            fill: #263238;
+                        }
+
+                        .st1 {
+                            fill: #F7D147;
+                        }
+                    </style>
+                    <rect class="animatestroke" x="1.0141" y="1.0141" width="29.989" height="29.989" fill="none"
+                        stroke="black" stroke-linecap="round" stroke-width=".6" />
+                </svg>
             </div>
-        </nav>
+        </a>
+
+        <div class="content">
+            <div class="navline"></div>
+        </div>
+
+
+
+        <div class="sidenav">
+
+
+
+            <ul>
+                <li><a id="navline-home" class="show navsign" href="#home">
+                        <div class="sideline">
+                            <div class="inner home-nav-item"></div>
+                        </div>
+                        <p class="number home-nav-item">001</p>
+                        <p class="titel home-nav-item">M1</p>
+                    </a></li>
+                <li><a id="navline-digitalisierung" class="show navsign" href="#digitalisierung">
+                        <div class="sideline">
+                            <div class="inner digitalisierung-nav-item"></div>
+                        </div>
+                        <p class="number digitalisierung-nav-item">002</p>
+                        <p class="titel digitalisierung-nav-item">Digital</p>
+                    </a></li>
+                <li><a id="navline-bim5d" class="show navsign" href="#bim5d">
+                        <div class="sideline">
+                            <div class="inner bim5d-nav-item"></div>
+                        </div>
+                        <p class="number bim5d-nav-item">003</p>
+                        <p class="titel bim5d-nav-item">Bim5D</p>
+                    </a></li>
+                <li><a id="navline-wir" class="show navsign" href="#wir">
+                        <div class="sideline">
+                            <div class="inner wir-nav-item"></div>
+                        </div>
+                        <p class="number wir-nav-item">004</p>
+                        <p class="titel wir-nav-item">Über uns</p>
+                    </a></li>
+                <li><a id="navline-boxes" class="show navsign" href="#boxes">
+                        <div class="sideline">
+                            <div class="inner boxes-nav-item"></div>
+                        </div>
+                        <p class="number boxes-nav-item">005</p>
+                        <p class="titel boxes-nav-item">Plan</p>
+                    </a></li>
+                <li><a id="navline-faq" class="show navsign" href="#faq">
+                        <div class="sideline">
+                            <div class="inner faq-nav-item"></div>
+                        </div>
+                        <p class="number faq-nav-item">006</p>
+                        <p class="titel faq-nav-item">FAQ</p>
+                    </a></li>
+            </ul>
+
+
+        </div>
+    </nav>
+
+    <div class="content-wrapper">
 
 
 
@@ -208,10 +217,10 @@
                                     &nbsp;
                                 </div>
                                 <h4 class="flip__heading">
-                                    <span class="flip__heading--span flip__heading--span--1">Jungle Profi</span>
+                                    <span class="flip__heading--span flip__heading--span--1">Planungsphase</span>
 
                                 </h4>
-                                <div class="flip__details">
+                                <!-- <div class="flip__details">
                                     <ul>
                                         <li>3 day bootcamp</li>
                                         <li>how to clear camps</li>
@@ -219,16 +228,19 @@
                                         <li>become lee sin god</li>
                                         <li>jungle pathing</li>
                                     </ul>
-                                </div>
+                                </div> -->
 
                             </div>
                             <div class="flip__side flip__side--back flip__side--back-1">
                                 <div class="flip__cta">
                                     <div class="flip__price-box">
-                                        <p class="flip__price-only">Only</p>
-                                        <p class="flip__price-value">$298</p>
+                                        <p class="flip__price-only">Planungsphase</p>
+                                        <p class="flip__price-value">Lorem ipsum dolor, sit amet consectetur adipisicing
+                                            elit. Maxime officiis dicta perspiciatis error expedita, possimus voluptatem
+                                            quia sequi impedit reiciendis id atque rem necessitatibus eum iusto
+                                            doloribus sapiente voluptatibus provident?</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+
                                 </div>
                             </div>
                         </div>
@@ -240,10 +252,10 @@
                                     &nbsp;
                                 </div>
                                 <h4 class="flip__heading">
-                                    <span class="flip__heading--span flip__heading--span--1">Jungle Profi</span>
+                                    <span class="flip__heading--span flip__heading--span--1">Bauphase</span>
 
                                 </h4>
-                                <div class="flip__details">
+                                <!-- <div class="flip__details">
                                     <ul>
                                         <li>3 day bootcamp</li>
                                         <li>how to clear camps</li>
@@ -251,16 +263,19 @@
                                         <li>become lee sin god</li>
                                         <li>jungle pathing</li>
                                     </ul>
-                                </div>
+                                </div> -->
 
                             </div>
                             <div class="flip__side flip__side--back flip__side--back-1">
                                 <div class="flip__cta">
                                     <div class="flip__price-box">
-                                        <p class="flip__price-only">Only</p>
-                                        <p class="flip__price-value">$298</p>
+                                        <p class="flip__price-only">Bauphase</p>
+                                        <p class="flip__price-value">Lorem ipsum dolor sit amet consectetur adipisicing
+                                            elit. Natus veniam ea dolores suscipit fugiat? Iusto cupiditate totam
+                                            doloribus quod est, doloremque aliquid impedit nemo minima commodi,
+                                            voluptates ad quaerat? Velit.</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+
                                 </div>
                             </div>
                         </div>
@@ -272,10 +287,10 @@
                                     &nbsp;
                                 </div>
                                 <h4 class="flip__heading">
-                                    <span class="flip__heading--span flip__heading--span--1">Jungle Profi</span>
+                                    <span class="flip__heading--span flip__heading--span--1">Betriebsphase </span>
 
                                 </h4>
-                                <div class="flip__details">
+                                <!-- <div class="flip__details">
                                     <ul>
                                         <li>3 day bootcamp</li>
                                         <li>how to clear camps</li>
@@ -283,16 +298,19 @@
                                         <li>become lee sin god</li>
                                         <li>jungle pathing</li>
                                     </ul>
-                                </div>
+                                </div> -->
 
                             </div>
                             <div class="flip__side flip__side--back flip__side--back-1">
                                 <div class="flip__cta">
                                     <div class="flip__price-box">
-                                        <p class="flip__price-only">Only</p>
-                                        <p class="flip__price-value">$298</p>
+                                        <p class="flip__price-only">Betriebsphase</p>
+                                        <p class="flip__price-value">Lorem ipsum dolor sit amet consectetur adipisicing
+                                            elit. Nesciunt sed repellendus voluptas quo blanditiis similique enim
+                                            nostrum culpa ab, magni quibusdam nobis libero commodi obcaecati optio
+                                            excepturi maiores amet molestiae.</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+
                                 </div>
                             </div>
                         </div>
@@ -305,7 +323,7 @@
             <div class="wrapper">
                 <h1 class="heading-1 wir-cap-heading">FAQ</h1>
                 <div class="flex-grid">
-                    <div class="col">Col-1</div>
+                    <div class="col"></div>
                     <div class="col">Col-2</div>
                 </div>
             </div>
@@ -340,29 +358,63 @@
 
         </section>
 
+        <section class="faq navto" id="faq">
+            <div class="wrapper">
+                <h1 class="heading-1 faq-cap-heading">FAQ</h1>
+
+                <div class="flex-grid">
+                    <div class="col">
+                        <a class="faqslide">
+                            <h3>01</h3>
+                            <p> <span>Frage 1 ?</span> </p>
+                        </a>
+                        <a class="faqslide">
+                            <h3>02</h3>
+                            <p> <span>Frage 2 ?</span> </p>
+                        </a>
+                        <a class="faqslide">
+                            <h3>03</h3>
+                            <p> <span>Frage 3 ?</span> </p>
+                        </a>
+                        <a class="faqslide">
+                            <h3>04</h3>
+                            <p> <span>Frage 4 ?</span> </p>
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+
 
 
 
     </div>
 
 
-
-    <script>
-        function timeout(ms) {
-            return new Promise(resolve => setTimeout(resolve, ms));
-        }
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
-    <script src="js/scrollevents.js"></script>
-    <script src="js/navbar.js"></script>
-    <script src="js/mobilenav.js"></script>
     <script>
         window.addEventListener('load', () => {
             document.querySelector('.loader-wrapper').style.display = "none";
             document.querySelector('.content-wrapper').style.visibility = "visible";
         })
     </script>
+    <script>
+        function timeout(ms) {
+            return new Promise(resolve => setTimeout(resolve, ms));
+        }
+    </script>
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0/dist/smooth-scroll.polyfills.min.js">
+    </script>
+    <script>
+        var scroll = new SmoothScroll('a[href*="#"]');
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+    <script src="js/scrollevents.js"></script>
+    <script src="js/navbar.js"></script>
+    <script src="js/mobilenav.js"></script>
+
 
     <script>
 
