--- a/datenschutz.html
+++ b/datenschutz.html
@@ -44,9 +44,9 @@
 
 
 
-    <section class="impressum" id="digitalisierung">
+    <section class="datenschutz">
         <div class="wrapper">
-            <h1 class="heading-1 active-dark">Datenschutz</h1>
+            <h1>Datenschutz</h1>
             <p>Wir freuen uns sehr über Ihr Interesse an unserem Unternehmen. Datenschutz hat einen besonders hohen
                 Stellenwert für die Geschäftsleitung der Modular One GmbH. Eine Nutzung der Internetseiten der Modular
                 One GmbH ist grundsätzlich ohne jede Angabe personenbezogener Daten möglich. Sofern eine betroffene
@@ -171,13 +171,13 @@
                 Europäischen Union geltenden Datenschutzgesetze und anderer Bestimmungen mit datenschutzrechtlichem
                 Charakter ist die:</p>
 
-            <p>Modular One GmbH</p>
-            <p>Ludwigstraße 56</p>
-            <p>35390 Gießen</p>
-            <p>Deutschland</p>
-            <p>Tel.: +49 177 308953</p>
-            <p>E-Mail: info@m-1.de</p>
-            <p>Website: www.m-1.de</p>
+            <h3>Modular One GmbH</h3>
+            <h3>Ludwigstraße 56</h3>
+            <h3>35390 Gießen</h3>
+            <h3>Deutschland</h3>
+            <h3>Tel.: +49 177 308953</h3>
+            <h3>E-Mail: info@m-1.de</h3>
+            <h3>Website: www.m-1.de</h3>
 
             <h4>3. Cookies</h4>
             <p>Die Internetseiten der Modular One GmbH verwenden Cookies. Cookies sind Textdateien, welche über einen
