--- a/impressum.html
+++ b/impressum.html
@@ -46,7 +46,7 @@
 
     <section class="impressum" id="digitalisierung">
         <div class="wrapper">
-            <h1 class="heading-1 active-dark">Impressum</h1>
+            <h1>Impressum</h1>
 
 
             <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
@@ -69,8 +69,6 @@
             <h2>Verbraucher&shy;streit&shy;beilegung/Universal&shy;schlichtungs&shy;stelle</h2>
             <p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer
                 Verbraucherschlichtungsstelle teilzunehmen.</p>
-
-            <p>Quelle: <a href="https://www.e-recht24.de">e-recht24.de</a></p>
 
         </div>
     </section>
